@@ -1,7 +1,8 @@
 Revision history for Perl extension PPM::Repositories
 
 0.12  (unreleased)
-    - remove smueller repository ( http://rt.cpan.org/Ticket/Display.html?id=23979 )
+    - remove smueller repository [http://rt.cpan.org/Ticket/Display.html?id=23979]
+    - remove datetime repository [http://rt.cpan.org/Ticket/Display.html?id=17391]
 
 0.11  Thu May 12 04:46:47 2005
     - removed some repositories that are gone for good
